// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line component between stops with branches renders and matches snapshot 1`] = `
<DocumentFragment>
  <svg>
    <line
      class="line-diagram-svg__line"
      stroke-width="10px"
      x1="11px"
      x2="11px"
      y1="17px"
      y2="24px"
    />
    <line
      class="line-diagram-svg__line"
      stroke-width="10px"
      x1="27px"
      x2="27px"
      y1="17px"
      y2="24px"
    />
    <line
      class="line-diagram-svg__line"
      stroke-width="16px"
      x1="43px"
      x2="43px"
      y1="17px"
      y2="24px"
    />
  </svg>
</DocumentFragment>
`;

exports[`Line component between stops with disruptions renders and matches snapshot 1`] = `
<DocumentFragment>
  <svg>
    <line
      class="line-diagram-svg__line"
      stroke="url(#shuttle)"
      stroke-width="10px"
      x1="11px"
      x2="11px"
      y1="17px"
      y2="24px"
    />
  </svg>
</DocumentFragment>
`;

exports[`Line component renders and matches snapshot 1`] = `
<DocumentFragment>
  <svg>
    <line
      class="line-diagram-svg__line"
      stroke="url(#shuttle)"
      stroke-width="10px"
      x1="11px"
      x2="11px"
      y1="17px"
      y2="24px"
    />
  </svg>
</DocumentFragment>
`;
